# sgj2016

./: .gitignore  .gitmodules  LICENSE  todo.txt
Utils/: count_lines.py  mirror_normals.bat  mirror_normals.py  mirror_normals_x.bat  mirror_normals_x.py  plistToJSON.cpp  release_make.py
Utils/Distortion/: distortion_builder.py  distortion_converter.py  distortion_shockwave.py
Utils/texturepacker_exporters/mxlib/: exporter.xml  mxlib-spritesheet.json
src/: CMakeLists.txt  emconfig.bat  main.cpp
src/Game/: DebugCheats.cpp  DebugCheats.h  GameInitializer.cpp  GameInitializer.h  TestManager.cpp  TestManager.h
src/Game/Interface/: GUIManager.cpp  GUIManager.h
src/Game/Main/: GameCommands.cpp  GameCommands.h  MainGame.cpp  MainGame.h
src/Game/Main/Events/: Events.cpp  Events.h  Game.h
src/Game/Model/: Action.cpp  Action.h  Events.cpp  Events.h  Game.cpp  Game.h  Gem.cpp  Gem.h  Level.cpp  Level.h  Mana.cpp  Mana.h  Model.cpp  Model.h  Player.cpp  Player.h  Rule.cpp  Rule.h  Stat.cpp  Stat.h
src/Game/View/: View.cpp  View.h
src/Res/Script/Game/: Button.msl  Text.msl
src/Res/Script/Game/Actions/: Actions.msl  Rules.msl
src/Res/Script/Game/Game/: Action.msl  Actions.msl  Fireball.msl  Freeze.msl  Game.msl  GameVictory.msl  Gem.msl  Level.msl  ParticleExplosion.msl  Selector.msl
src/Res/Script/Game/Interface/: Button.msl  GUI.msl  MainMenu.msl  TextField.msl
src/Res/Script/Game/Main/: BG.Game.msl  Container.msl  Emoji.msl  EmojiEffects.msl  Game.msl  GameWin.msl  Item.msl  Player.msl
src/Res/Script/Game/Main/Effects/: Crying.msl  Love.msl  Resources.msl
src/Res/Script/Game/Model/: Events.msl  Game.msl
src/Res/Script/Game/Music/: TestTrack.msl
src/Res/Script/Game/Test/: Test.msl
src/Res/Script/Interface/: MainMenu.msl
src/Res/Script/Test/: cheat.json  cheats.msl  distortions_test.json  test_scene.msl
src/Res/Shaders/: basic.fragment  default.vertex  instanced.vertex
src/Res/Shaders/deferred/: ambient.fragment  instanced_normal.vertex  lightning.fragment  lightning.vertex  normal.fragment
src/Res/Shaders/distortion/: distortion.fragment  distortion_vignette.fragment  instanced_distortion_sprite.fragment  instanced_distortion_sprite.vertex
src/Res/Shaders/include/: enemy_utils.glsl  instanced_fragment.glsl  instanced_vertex.glsl  lightning.glsl  noise.glsl  utils.glsl
src/Res/Shaders/include/functions/: antialias.glsl  getWaterNoise.glsl  hue.glsl  hue_saturation.glsl  luminance.glsl  saturation.glsl
src/Res/Shaders/menu/: background.fragment  menu.fragment  star.fragment
src/Res/Shaders/test/: border_blur.fragment  grayscale.fragment  instanced_gauss.vertex  simple_gauss.fragment
src/Res/Shaders/water/: test.fragment  water.vertex
src/res/script/Game/Interface/: Button.msl  Button.msl2  MainMenu.msl  MainMenu.msl2
src/res/script/game/actions/: Actions.msl
src/res/script/game/game/: Action.msl  Fireball.msl  Freeze.msl  Game.msl  Gem.msl  Level.msl  ParticleExplosion.msl  Selector.msl
src/res/shader/: test.fragment  test.vertex
